2000-05-14  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/guile/guile-util.c: added several interface functions to
	src/scm/engine-interface.scm.

	* src/Refresh.c (gnc_account_glist_ui_refresh): added a refresh
	function that takes glib lists. Much more convenient.

	* src/SplitLedger.c: add functionality for transaction
	cut/copy/paste.

	* src/MultiLedger.c (ledgerIsMember): always return true
	for SEARCH_LEDGERS. Simple, but safe.

2000-05-12  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* Makefile.in: add -follow arguments to find commands

	* Makefile.common (CFLAGS): removed hard-coded profiling option

	* configure.in: add a profiling argument.

	* src/guile/gnucash.c: use putenv, not setenv. putenv is POSIX,
	seems to be more common.

2000-05-10  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* many: removed use of SCM registry in favor of scm_protect_object
	and scm_unprotect_object.

	* src/engine/GNCId.c (xaccRemoveEntity): don't allow the NULL id
	to be removed.

	* src/scm: remove some old, unused files.

	* src/register/splitreg.c (configLayout): swap mirrored xfer from
	and xfer to field in the transaction line of the ledgers.

2000-05-09  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/dialog-add.c (gnc_ui_accWindow_create_account): insert
	the account *after* setting the account values so the sort order
	is correct.

	* src/engine/Account.c (xaccAccountInsertSplit): check the currency
	before inserting.

2000-05-08  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/GNCId.c (xaccGUIDNew): new function to generate
	IDs for gnucash. Use this, not guid_new. Also modified other
	engine files to use this function.

	* src/register/pricecell.c (COLORIZE): check for being close to
	zero before colorizing red.

	* src/scm/main.scm (gnc:main): if no filename was specified, open
	the most recent file in the history.

	* src/gnome/file-history.c (gnc_history_get_last): new function to
	return the last filename the user opened.
